# NashiOS

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
Documentation/: BuildInstructions.md
Kernel/: Boot.S  CMakeLists.txt  Io.hpp  Linker.ld  Main.cpp  Serial.cpp  Serial.hpp
Scripts/: Run.sh  SetupToolchain.sh
St/: Types.hpp
